Make the Info class more respectable